<resources>
    <string name="app_name">Ad Skipper</string>
    <string name="title_activity_main">Ad Skipper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="service_disabled_fragment_label">Service Disabled Fragment</string>
    <string name="service_enabled_fragment_label">Service Enabled Fragment</string>
    <string name="tutorial_fragment_label">Tutorial Fragment</string>

    <string name="a11y_service_disabled_message">Ad Skipper is an app that automates clicking the Skip Ads button that appears in certain video apps.\n\nIt uses Accessibility features to scan window content, detect the Skip Ads button and then click on the Skip Ads button on your behalf.\n\nAd Skipper does not use or share any of your personal information or data.\n \nClick on Agree to continue and enable the service in Accessibility Settings.</string>
    <string name="a11y_service_enabled_message">Ad Skipper is ready for use. You can disable it in Accessibility Settings.</string>
    <string name="go_to_a11y_settings">Go to Accessibility Settings</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="mute_ads">Mute Ads</string>
    <string name="mute_ads_desc">Mute volume on advertisements</string>
    <string name="enable_logging">Capture logs for 2 minutes</string>
    <string name="enable_logging_desc">Logging affects performance</string>
    <string name="tutorial">View short video on how to do this</string>
    <string name="title_activity_settings">Ad Skipper Settings</string>
</resources>